Modified page's title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Presentation</title>
+    <title>Hbd Damilola</title>
   </head>
   <body>
     <!-- Page 1 (Intro) -->
